Minor Bugs and Readme

--- a/res/layout/activity_audio_sens.xml
+++ b/res/layout/activity_audio_sens.xml
@@ -87,6 +87,31 @@
                 </TableRow>
 
                 <TableRow
+                    android:id="@+id/version_tr"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1" >
+
+                    <TextView
+                        android:id="@+id/version_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Version"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/version_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:padding="5dp"
+                        android:text="0"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                </TableRow>
+
+                <TableRow
                     android:id="@+id/results_heading_tr"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
